--- a/index.html
+++ b/index.html
@@ -768,27 +768,23 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
   <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
   <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
   <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
-  <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
-  <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
-  <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
   
+</tr>
+<tr>
+  <td width="100%" height="100" align="center" class="simple_arrow" colspan="7"></td>
 </tr>
 </table>
 </section>
 <section data-transition="fade-in">
 <table width="100%" class="no_border">
 	<tr>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
+
 		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
 		<td width="50%" height="100" align="center" style="background-size: 100% 100%" colspan="5" background="hand-drawn-arrow-3.png"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
 		
 	</tr>
 	<tr class="fragment">
-		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
@@ -797,8 +793,6 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
 		
-
-		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
