--- a/index.html
+++ b/index.html
@@ -759,8 +759,9 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 </section>
 <section>
  
-<table width="100%">
+<table width="100%" class="no_border">
 <tr>
+  <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
   <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
   <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
   <td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
@@ -778,10 +779,10 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 <section data-transition="fade-in">
 <table width="100%" class="no_border">
 	<tr>
-
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
-		<td width="50%" height="100" align="center" style="background-size: 100% 100%" colspan="5" background="hand-drawn-arrow-3.png"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-2.png"></td>
+		<td width="10%" height="100" align="center" class="fragment simple_arrow" background="hand-drawn-arrow-2.png"></td>
+		<td width="10%" height="100" align="center" class="fragment simple_arrow" background="hand-drawn-arrow-4.png"></td>
+		<td width="50%" height="100" align="center" class="fragment" style="background-size: 100% 100%" colspan="5" background="hand-drawn-arrow-3.png"></td>
+		<td width="10%" height="100" align="center" class="fragment simple_arrow" background="hand-drawn-arrow-2.png"></td>
 		
 	</tr>
 	<tr class="fragment">
