--- a/index.html
+++ b/index.html
@@ -787,6 +787,7 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 	</tr>
 	<tr class="fragment">
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
