--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@ histogram.getValueAtPercentile(99.9);</code></pre>
 
 <section align="left">
 	<div style="margin: 0 20%">
-		<h1>High</h1>
-		<h1>Dynamic</h1>
-		<h1>Range</h1>
+		<h1>H<span class="fragment" data-fragment-index="1">igh</span></h1>
+		<h1>D<span class="fragment" data-fragment-index="1">ynamic</span></h1>
+		<h1>R<span class="fragment" data-fragment-index="1">ange</span></h1>
 	</div>
 </section>
 
