--- a/index.html
+++ b/index.html
@@ -774,6 +774,15 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 <tr>
   <td width="100%" height="100" align="center" class="simple_arrow" colspan="7"></td>
 </tr>
+<tr>
+  <td width="100%" height="100" align="center" class="simple_arrow" colspan="7"></td>
+</tr>
+<tr>
+  <td width="100%" height="100" align="center" class="simple_arrow" colspan="7"></td>
+</tr>
+<tr>
+  <td width="100%" height="100" align="center" class="simple_arrow" colspan="7"></td>
+</tr>
 </table>
 </section>
 <section data-transition="fade-in">
@@ -790,11 +799,40 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="40%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
+	</tr>
+	<tr class="fragment">
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="30%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		
+	</tr>
+	<tr class="fragment">
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="20%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		
+	</tr>
+	<tr class="fragment">
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
