--- a/index.html
+++ b/index.html
@@ -799,18 +799,18 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="40%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="40%" height="100" align="center" class="simple_arrow" colspan="4" background="hand-drawn-arrow-4-grey.png"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
-	<!--
+	
 	<tr class="fragment">
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="30%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="30%" height="100" align="center" class="simple_arrow" colspan="3" background="hand-drawn-arrow-4-grey.png"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
@@ -821,7 +821,7 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="20%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="20%" height="100" align="center" class="simple_arrow" colspan="2" background="hand-drawn-arrow-4-grey.png"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
@@ -836,7 +836,7 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
-	</tr>-->
+	</tr>
 
 </table>
 </section>
