coordinated omissions update

--- a/index.html
+++ b/index.html
@@ -757,6 +757,8 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 <section>
  TODO code du bench en js
 </section>
+
+<!--
 <section>
  
 <table width="100%" class="no_border">
@@ -785,21 +787,29 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 </tr>
 </table>
 </section>
+-->
+<section data-background="danger2.png" data-background-size="40%" data-background-position="top">
+
+</section>
+
 <section data-transition="fade-in">
+	<h3>Coordinated ommissions</h3>
+	<h3>&nbsp;</h3>
 <table width="100%" class="no_border">
 	<tr>
 		<td width="10%" height="100" align="center" class="fragment simple_arrow" background="hand-drawn-arrow-2.png"></td>
 		<td width="10%" height="100" align="center" class="fragment simple_arrow" background="hand-drawn-arrow-4.png"></td>
-		<td width="50%" height="100" align="center" class="fragment" style="background-size: 100% 100%" colspan="5" background="hand-drawn-arrow-3.png"></td>
 		<td width="10%" height="100" align="center" class="fragment simple_arrow" background="hand-drawn-arrow-2.png"></td>
-		
+		<td width="50%" height="100" align="center" class="fragment" style="background-size: 100% 100%" colspan="5" background="hand-drawn-arrow-3.png"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 	</tr>
 	<tr class="fragment">
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="40%" height="100" align="right" class="simple_arrow" colspan="4" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		<td width="40%" height="100" align="right" class="simple_arrow" colspan="4" background="hand-drawn-arrow-4-grey.png" style="background-position: right; background-size: 100% 100%"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
@@ -810,7 +820,8 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="30%" height="100" align="right" class="simple_arrow" colspan="3" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		<td width="30%" height="100" align="right" class="simple_arrow" colspan="3" background="hand-drawn-arrow-4-grey.png" style="background-position: right; background-size: 100% 100%"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
@@ -821,26 +832,31 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="20%" height="100" align="right" class="simple_arrow" colspan="2" background="hand-drawn-arrow-4-grey.png"></td>
+		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
+		<td width="20%" height="100" align="right" class="simple_arrow" colspan="2" background="hand-drawn-arrow-4-grey.png" style="background-position: right; background-size: 100% 100%"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
-	<tr class="fragment">
-		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
-		
-		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" background="hand-drawn-arrow-4-grey.png"></td>
-		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
-		
-	</tr>
-
+	
 </table>
 </section>
+<section>
+ FIX avant + fix after
+</section>
+<section>
+DEMO
+</section>
 
+<section  data-background="duke-sunglass.png" data-background-size="20%" data-background-position="right">
+	<h1>jHiccup</h1>
+</section>
+<section>
+TODO schema comment ça marche
+</section>
+
+<section>
+DEMO
+</section>
 
 
 			</div>
