Add measure meme

--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
 	</aside>
 </section>
 
+<section data-background="measure-meme.png" data-background-size="40%">
+</section>
 <section data-background="measure-problem.jpg">
-
 </section>
 
 <section data-background-color="#FFF" data-background-iframe="./Anscombe/index.html">
