Add jhiccup content

--- a/index.html
+++ b/index.html
@@ -789,12 +789,12 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 </table>
 </section>
 -->
-<section data-background="danger2.png" data-background-size="40%" data-background-position="top">
-
+<section>
+	<img src="coordinated-omission.png" class="stretch" style="border: 0px; box-shadow: 0 0 0 0"/>
 </section>
 
 <section data-transition="fade-in">
-	<h3>Coordinated ommissions</h3>
+	<h3>Coordinated ommission</h3>
 	<h3>&nbsp;</h3>
 <table width="100%" class="no_border">
 	<tr>
@@ -810,7 +810,7 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
-		<td width="40%" height="100" align="right" class="simple_arrow" colspan="4" background="hand-drawn-arrow-4-grey.png" style="background-position: right; background-size: 100% 100%"></td>
+		<td width="40%" height="100" align="right" class="simple_arrow" colspan="4" background="hand-drawn-arrow-4-dark-grey.png" style="background-position: right; background-size: 100% 100%"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
@@ -822,7 +822,7 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
-		<td width="30%" height="100" align="right" class="simple_arrow" colspan="3" background="hand-drawn-arrow-4-grey.png" style="background-position: right; background-size: 100% 100%"></td>
+		<td width="30%" height="100" align="right" class="simple_arrow" colspan="3" background="hand-drawn-arrow-4-dark-grey.png" style="background-position: right; background-size: 100% 100%"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
@@ -834,7 +834,7 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
-		<td width="20%" height="100" align="right" class="simple_arrow" colspan="2" background="hand-drawn-arrow-4-grey.png" style="background-position: right; background-size: 100% 100%"></td>
+		<td width="20%" height="100" align="right" class="simple_arrow" colspan="2" background="hand-drawn-arrow-4-dark-grey.png" style="background-position: right; background-size: 100% 100%"></td>
 		<td width="10%" height="100" align="center" class="simple_arrow" ></td>
 		
 	</tr>
@@ -848,11 +848,14 @@ En passant en plus à 3 chiffres significatifs, et en utilisant des integer pour
 DEMO
 </section>
 
-<section  data-background="duke-sunglass.png" data-background-size="20%" data-background-position="right">
+<section>
 	<h1>jHiccup</h1>
+	<h3>&nbsp;</h3>
+	<p>java&nbsp;&nbsp;-javaagent:jHiccup.jar&nbsp;&nbsp;MyProgram</p>
 </section>
 <section>
-TODO schema comment ça marche
+	<img src="jhiccup-schema.png" class="stretch" style="border: 0px;"/>
+	<p>&nbsp;</p>
 </section>
 
 <section>
