fix img styling

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				background-image: "hand-drawn-arrow-2.png";
 			}
 
-			.no_border_img {
+			.reveal section img.no_border_img {
 				border: 0px; 
 				box-shadow: 0 0 0 0;
 			}
